--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,15 @@
 Assembly-*
-Library/cache/*
-Library/metadata/*
 Temp/*
-Library/previews/*
+Library/*
+Build/*
+#Un-ignore these specific files
+!Library/*.asset
+!Library/AssetImportState
+!Library/AssetVersioning.db
+!Library/BuildPlayer.prefs
+!Library/ScriptMapper
+!Library/assetservercachev3
+!Library/expandedItems
+!Library/guidmapper
+!Library/unity default resources
+!Library/unity editor resources
